Fixed alignment issues in logout page Reduced space between navbar links

--- a/gkwebapp/static/css/mainshellstyle.css
+++ b/gkwebapp/static/css/mainshellstyle.css
@@ -32,6 +32,8 @@ a:focus,
 }
 .gknav .navbar-nav > li > a {
     color: white;
+		padding-left: 7px;
+		padding-right: 7px;
 }
 .gknav .navbar-nav > li > a:hover, .gknav .navbar-nav > li > a:focus {
     background-color: black;
